fixed sticky image issue in multiple info section mobile

--- a/assets/styles/blocks/_multiple-info.scss
+++ b/assets/styles/blocks/_multiple-info.scss
@@ -107,17 +107,15 @@
       margin: 0 auto 40px;
       width: 100%;
       height: auto;
-      position: -webkit-sticky;
-      position: sticky;
-      top: 50px;
 
       @media (min-width: $bp-L) {
         flex-basis: 50%;
         margin: 0;
         max-width: none;
-      }
+        position: -webkit-sticky;
+        position: sticky;
+        top: 50px;
 
-      @media (min-width: $bp-L) {
         img {
           width: 100%;
         }
@@ -125,6 +123,8 @@
     }
 
     &__content {
+      overflow: hidden;
+
       @media (min-width: $bp-L) {
         flex-basis: 50%;
       }
